--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Fira Code';
+  src: url('./fonts/firacode/woff2/FiraCode-Light.woff2') format('woff2'),
+    url("./fonts/firacode/woff/FiraCode-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@font-face {
+  font-family: 'Fira Code';
+  src: url('./fonts/firacode/woff2/FiraCode-Regular.woff2') format('woff2'),
+    url("./fonts/firacode/woff/FiraCode-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('./fonts/firacode/woff2/FiraCode-Medium.woff2') format('woff2'),
+    url("./fonts/firacode/woff/FiraCode-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+body {
+  margin: 0;
+  font-family: 'Fira Code', source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+  font-weight: 400;
+  color: #fff;
+  background-color: #111;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
