--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,34 @@
   font-style: normal;
 }
 
+button {
+  cursor: pointer;
+  border: none;
+  margin: 0;
+  padding: 12px;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  font-size: 0;
+  transition: opacity 0.15s linear;
+  opacity: 0.6;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: 'Fira Code', source-code-pro, Menlo, Monaco, Consolas, "Courier New",
